--- a/thesis/latex/Bibliografia.bib
+++ b/thesis/latex/Bibliografia.bib
@@ -192,3 +192,37 @@
 	biburl = {https://dblp.org/rec/journals/corr/LiuOQWC16.bib},
 	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@misc{lin2015microsoftcococommonobjects,
+	title={Microsoft COCO: Common Objects in Context}, 
+	author={Tsung-Yi Lin and Michael Maire and Serge Belongie and Lubomir Bourdev and Ross Girshick and James Hays and Pietro Perona and Deva Ramanan and C. Lawrence Zitnick and Piotr Dollár},
+	year={2015},
+	eprint={1405.0312},
+	archivePrefix={arXiv},
+	primaryClass={cs.CV},
+	url={https://arxiv.org/abs/1405.0312}
+}
+
+@article{moore2020fiftyone,
+	title={FiftyOne},
+	author={Moore, B. E. and Corso, J. J.},
+	journal={GitHub. Note: https://github.com/voxel51/fiftyone},
+	year={2020}
+}
+
+@misc{tensorflow2015-whitepaper,
+	title={ {TensorFlow}: Large-Scale Machine Learning on Heterogeneous Systems},
+	url={https://www.tensorflow.org/},
+	note={Software available from tensorflow.org},
+	author={Mart\'{i}n Abadi and Ashish Agarwal and Paul Barham and Eugene Brevdo and Zhifeng Chen and Craig Citro and Greg S. Corrado and Andy Davis and Jeffrey Dean and Matthieu Devin and Sanjay Ghemawat and Ian Goodfellow and Andrew Harp and Geoffrey Irving and Michael Isard and Yangqing Jia and Rafal Jozefowicz and Lukasz Kaiser and Manjunath Kudlur and Josh Levenberg and Dandelion Man\'{e} and Rajat Monga and Sherry Moore and Derek Murray and Chris Olah and Mike Schuster and Jonathon Shlens and Benoit Steiner and Ilya Sutskever and Kunal Talwar and Paul Tucker and Vincent Vanhoucke and Vijay Vasudevan and Fernanda Vi\'{e}gas and Oriol Vinyals and Pete Warden and Martin Wattenberg and Martin Wicke and Yuan Yu and Xiaoqiang Zheng},
+	year={2015}
+}
+
+@misc{tfobdTutorial,
+	title={Object detection with model garden : Tensorflow Core},
+	url={https://www.tensorflow.org/tfmodels/vision/object_detection},
+	journal={TensorFlow},
+	author={Patlolla, Laxma Reddy and Neeli, Siva Sravana Kumar and Daoust, Mark and bharatjetti},
+	year={2025},
+	month={Feb}
+} 
