--- a/thesis/latex/thesis.tex
+++ b/thesis/latex/thesis.tex
@@ -80,10 +80,9 @@ Good luck!
 \input{intro.tex}
 \input{bg.tex}
 \input{literature-review.tex}
-\input{arch-description.tex}
-\input{implementation.tex}
+\input{proto.tex}
+\input{experimental_setup.tex}
 \input{usability.tex}
-\input{feasibility.tex}
 \input{conclusion.tex}
 
 %\input{file_name_of_chapter_x}
