--- a/thesis/latex/usability.tex
+++ b/thesis/latex/usability.tex
@@ -1,4 +1,4 @@
-\chapter{(USABILITY)} \label{usability}
+\chapter{Usability study} \label{usability}
 
 Justification for RQ3 here \\
 RQ3: user experience
