Written some text on multi-state tracking/action detection, Changed structure in relation to Web AR

--- a/thesis/latex/Bibliografia.bib
+++ b/thesis/latex/Bibliografia.bib
@@ -226,3 +226,19 @@
 	year={2025},
 	month={Feb}
 } 
+
+﻿@Article{sedaghati2025,
+	author={Sedaghati, Nazanin and Ardebili, Sondos and Ghaffari, Ali},
+	title={Application of human activity/action recognition: a review},
+	journal={Multimedia Tools and Applications},
+	year={2025},
+	month={Aug},
+	day={01},
+	volume={84},
+	number={28},
+	pages={33475-33504}, 
+	abstract={Human activity recognition is a crucial domain in computer science and artificial intelligence that involves the Detection, Classification, and Prediction of human activities using sensor data such as accelerometers, gyroscopes, etc. This field utilizes time-series signals from sensors present in smartphones and wearable devices to extract human activities. Various types of sensors, including inertial HAR sensors, physiological sensors, location sensors, cameras, and temporal sensors, are employed in diverse environments within this domain. It finds valuable applications in various areas such as smart homes, elderly care, the Internet of Things (IoT), personal care, social sciences, rehabilitation engineering, fitness, and more. With the advancement of computational power, deep learning algorithms have been recognized as effective and efficient methods for detecting and solving well-established HAR issues. In this research, a review of various deep learning algorithms is presented with a focus on distinguishing between two key aspects: activity and action. Action refers to specific, short-term movements and behaviors, while activity refers to a set of related, continuous affairs over time. The reviewed articles are categorized based on the type of algorithms and applications, specifically sensor-based and vision-based. The total number of reviewed articles in this research is 80 sources, categorized into 42 references. By offering a detailed classification of relevant articles, this comprehensive review delves into the analysis and scrutiny of the scientific community in the HAR domain using deep learning algorithms. It serves as a valuable guide for researchers and enthusiasts to gain a better understanding of the advancements and challenges within this field.},
+	issn={1573-7721},
+	doi={10.1007/s11042-024-20576-2},
+	url={https://doi.org/10.1007/s11042-024-20576-2}
+}
