Written about web ar

--- a/thesis/latex/Bibliografia.bib
+++ b/thesis/latex/Bibliografia.bib
@@ -242,3 +242,28 @@
 	doi={10.1007/s11042-024-20576-2},
 	url={https://doi.org/10.1007/s11042-024-20576-2}
 }
+
+@InProceedings{chen2022,
+	author={Chen, Chun-Wen and Chen, Ya Hsin},
+	editor={Gao, Qin and Zhou, Jia},
+	title={Prototype Development of an Interpretative Game with Location-Based AR for Ecomuseum},
+	booktitle={Human Aspects of IT for the Aged Population. Technology in Everyday Living},
+	year={2022},
+	publisher={Springer International Publishing},
+	address={Cham},
+	pages={360-370},
+	abstract={To improve the visiting effect of ecomuseum, this research proposes to utilize augmented reality (AR) technology and to study how to integrate appropriate interaction design can help get better experience in such museums. Augmented reality is a technology attaching computer generated images and information on the real world. AR users can see the original real world, and also can see supporting information images or virtual objects, that help provide related information and interaction of the real world and objects.},
+	isbn={978-3-031-05654-3}
+}
+
+@article{tfWeb,
+	author={Setyabudi, Eka and Qotrun Nada, Noora and Novita, Mega},
+	title={CNN Implementation in Progressive Web App for Automatic Garbage Classification using TensorFlow.js},
+	journal={Jurnal Teknologi Informasi dan Terapan},
+	volume={12},
+	number={2},
+	pages={105-114},
+	year={2025},
+	month={December},
+	url={https://jtit.polije.ac.id/index.php/jtit/article/view/458}
+}
